Fix up layout on ie11

--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,7 @@
 html {
     background-color: #eee;
 }
+
 body {
     background-color: white;
     font-family:sans-serif;
@@ -25,12 +26,22 @@ h1 {
     border-bottom: 3px solid black;
 }
 
+.ie.no-js h1, .ie.fonts-loaded h1 {
+    margin-top: 0.2em;
+    padding-bottom: 0.1em;
+}
+
 h2 {
     font-size: 8em;
     line-height: 0.8em;
     margin: 0.1em 0 0 -0.05em;
     letter-spacing: 0;
     font-weight: 700;
+}
+
+.ie.no-js h2, .ie.fonts-loaded h2 {
+    margin-top: 0.3em;
+    margin-bottom: -0.3em;
 }
 
 ul {
@@ -40,6 +51,11 @@ ul {
     font-size: 2.5em;
     line-height: 0.9em;
     font-weight: 500;
+}
+
+.ie.no-js ul, .ie.fonts-loaded ul {
+    margin-top: 0.5em;
+    margin-bottom: -0.2em;
 }
 
 acronym {
@@ -63,6 +79,11 @@ p {
     margin: 0.5em 0 0;
     text-align:center;
     font-weight: 500;
+}
+
+.ie.no-js p, .ie.fonts-loaded p {
+    margin-top: 0.6em;
+    margin-bottom: -0.2em;
 }
 
 a {
